# ROS-Learning-NSU

./: README.md  dynamic_carrot.launch.py  tf3_tutor.launch.py
ex01/: CMakeLists.txt  commands.txt  displays.launch.py  package.xml
ex01/service_full_name/: package.xml  setup.py
ex01/service_full_name/service_full_name/: client_file.py  server_file.py
ex02/: displays.launch.py  robot.urdf  robot.urdf.xacro  robot_kud.urdf.xacro  rviz_config.rviz  start.bash
ex02/action_turtle_commands/: package.xml  setup.py
ex02/action_turtle_commands/action_turtle_commands/: action_client.py  action_server.py  test.py
ex02/learning_tf2_py/: setup.py
ex02/learning_tf2_py/learning_tf2_py/: dynamic_frame_tf2_broadcaster.py  turtle_tf2_broadcaster.py
ex03/: commands  pose_speed_x1.yaml  pose_speed_x2.yaml  start.bash
ex03/learning_tf2_py/: package.xml
ex03/learning_tf2_py/learning_tf2_py/: static_turtle_tf2_broadcaster.py  turtle_tf2_listener.py
ex03/nerfman/: colcon_command_prefix_setup_py.sh.env
ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
ex04/: colcon_build.txt  doctor.txt
ex04/circle_movement/: package.xml  setup.py
ex04/required/: req.txt
ex04/tf2/: frames_2024-10-29_22.21.06.gv
ex05/: rosnode_info.txt  rosnode_list.txt
ex05/walle/: model2.mtl  req.txt
ex06/: cmd_vel.txt
ex08/: launch.py  rqt_console.csv
ex09/nerfman_name/: CMakeLists.txt
ex10/text_to_cmd_vel/: package.xml  setup.py
nerfman_name/: CMakeLists.txt  package.xml
nerfman_name/action/: MessageTurtleCommands.action
(+14 files in other folders)
