<?xml version="1.0"?>
<package format="2">
  <name>robot_urdf</name>
  <version>0.0.1</version>
  <description>Example robot with differential drive for ROS2</description>

  <maintainer email="nerfman@todo.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

